kubernetes/apps/network/envoy-gateway/config/cftunnel.yaml
---
# yaml-language-server: $schema=https://github.com/datreeio/CRDs-catalog/raw/refs/heads/main/gateway.networking.k8s.io/gateway_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: &name cftunnel
  annotations:
    external-dns.alpha.kubernetes.io/target: "cftunnel.${SECRET_DOMAIN}"
spec:
  gatewayClassName: envoy
  infrastructure:
    annotations:
      external-dns.alpha.kubernetes.io/hostname: "cftunnel.${SECRET_DOMAIN}"
    parametersRef:
      group: gateway.envoyproxy.io
      kind: EnvoyProxy
      name: *name
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: Same
    - name: https
      protocol: HTTPS
      port: 443
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: wildcard-${SECRET_DOMAIN/./-}-tls
