kubernetes/apps/network/envoy-gateway/config/internal.yaml
---
# yaml-language-server: $schema=https://github.com/datreeio/CRDs-catalog/raw/refs/heads/main/gateway.networking.k8s.io/gateway_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: &name envoy-internal
  annotations:
    external-dns.alpha.kubernetes.io/target: "internal.${SECRET_DOMAIN}"
spec:
  gatewayClassName: envoy
  addresses:
    - type: IPAddress
      value: "fd42:78a5:2c09::200"
    - type: IPAddress
      value: "192.168.0.192"
  infrastructure:
    annotations:
      metallb.io/loadBalancerIPs: 'fd42:78a5:2c09::200,192.168.0.192'
      external-dns.alpha.kubernetes.io/hostname: "internal.${SECRET_DOMAIN}"
    parametersRef:
      group: gateway.envoyproxy.io
      kind: EnvoyProxy
      name: *name
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: Same
    - name: https
      protocol: HTTPS
      port: 443
#      hostname: "*.${SECRET_DOMAIN}"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: wildcard-${SECRET_DOMAIN/./-}-tls
    - name: ssh
      protocol: TCP
      port: 2222
      allowedRoutes:
        namespaces:
          from: All
#        namespaces:
#          from: Selector
#          selector:
#            matchLabels:
        kinds:
          - kind: TCPRoute
